# behavior-spec

./: CLAUDE.md  README.md  pyproject.toml
docs/: spec-v1.md
docs/design/: 2026-07-01-agent-assisted-review.md
skills/behavior-spec/: SKILL.md
skills/behavior-spec/references/: cheatsheet.md
src/bspec/: __init__.py  checks.py  cli.py  context.py  diagram.py  doc.py  expression.py  hashing.py  loader.py  model.py  review.py  schema.py  status.py
src/bspec/schemas/: bspec.schema.json  module_template.json  review_state.schema.json
tests/: test_checks.py  test_cli.py  test_diagram.py  test_doc.py  test_expression.py  test_hashing.py  test_loader.py  test_review_input.py  test_review_status.py  test_schema.py
tests/fixtures/dups/behavior/: a.bspec.json  b.bspec.json
tests/fixtures/invalid/behavior/: bad.bspec.json
tests/fixtures/valid/behavior/: trading-ma-cross.bspec.json
tests/fixtures/valid/src/risk/: exposure.py
tests/fixtures/valid/strategies/: ma_cross.py
