[project]
name = "bspec"
version = "0.1.0"
description = "Deterministic CLI for domain-neutral Behavior Specs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.21",
    # Pinned exactly: celpy's parse tree is Lark IR, not a stable AST contract.
    # An AST shape change would silently churn semantic hashes. Bump only with
    # canonicalization golden tests green.
    "cel-python==0.5.0",
    "rfc8785>=0.1.2",
    "rich>=15.0.0",
    # Renders the derived mermaid diagrams in the review TUI. Output is cosmetic
    # (never hashed), so a loose floor is fine — render churn can't move a hash.
    "termaid>=0.7.1",
]

[project.scripts]
bspec = "bspec.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/wy-z/behavior-spec"
Repository = "https://github.com/wy-z/behavior-spec"
Issues = "https://github.com/wy-z/behavior-spec/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bspec"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
